[COZY-599] fix : 라이프스타일 캐싱 전략 다중값 처리